--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "objects.exhibit",
+  "name": "plumpcss-exhibit",
   "version": "0.1.0",
   "authors": [
     "James Howard <james@plumpdigital.co.uk>"
